Updated: Profile model, route, controller
